# deepl-tr-pyppeteer

./: .env  .gitignore  README.md  __main__.spec  clipboard-tr.txt  clipboard-tr_01.txt  deepl-tr-pp.spec  pyproject.toml
deepl_tr_pp/: __init__.py  __main__.py  browse_filename.py  config.py  deepl_tr_pp - Copy._py  deepl_tr_pp.py  gen_docx.py  gen_docx1.py  gen_filename.py  load_env.py  load_text.py  seg_text.py
tests/: test_deepl_tr_pp.py  test_seg_text.py
